# computerWork

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/cpu/: CPU.cpp  cpu.h
src/disk/: DISK.cpp  disk.h
src/gpu/: DISPLAY.cpp  display.h
src/kbd/: KEYBOARD.cpp  keyboard.h
src/ram/: RAM.cpp  ram.h
